Fixed text-align for stamps

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -101,7 +101,7 @@ h2 {
 .stamp {
 	margin: 25px 15px 10px;
 	font-size: 15px;
-	text-align: right;
+	text-align: left;
 	text-shadow: 1px 1px black;
 	bottom: 0;
 	right: 0;
